<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="anime"
            type="com.example.sadanime.modulo.principal.model.pojo.AnimesItem" />
    </data>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardElevation="8dp"
            app:cardBackgroundColor="@color/colorWhite"
            app:cardCornerRadius="@dimen/corner_card"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/img_poster"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    app:image="@{anime.poster}"
                    android:scaleType="centerCrop"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:contentDescription="@string/poster" />

                <TextView
                    android:id="@+id/lbl_title_anime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:ellipsize="end"
                    android:textSize="16sp"
                    android:textColor="@color/colorBlack"
                    android:text="@{anime.title}"
                    android:maxLines="1"
                    android:fontFamily="@font/googlesans_regular"
                    app:layout_constraintTop_toTopOf="@+id/img_poster"
                    app:layout_constraintLeft_toRightOf="@+id/img_poster"
                    app:layout_constraintRight_toLeftOf="@+id/img_visto"
                    />

                <TextView
                    android:id="@+id/lbl_cap_anime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:ellipsize="end"
                    android:maxLines="3"
                    android:textSize="12sp"
                    android:textColor="@color/colorBlack"
                    app:capitulo="@{anime.episodes}"
                    android:fontFamily="@font/googlesans_regular"
                    app:layout_constraintTop_toBottomOf="@+id/lbl_title_anime"
                    app:layout_constraintLeft_toRightOf="@+id/img_poster"
                    />

                <View
                    android:id="@+id/line_div"
                    android:layout_width="0dp"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="16dp"
                    android:background="@color/colorBlack"
                    app:layout_constraintTop_toBottomOf="@+id/lbl_cap_anime"
                    app:layout_constraintLeft_toRightOf="@id/img_poster"
                    app:layout_constraintRight_toRightOf="parent"
                    />

                <ImageView
                    android:id="@+id/img_visto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:visibility="gone"
                    app:srcCompat="@drawable/ic_visibility"
                    app:layout_constraintTop_toTopOf="@+id/lbl_title_anime"
                    app:layout_constraintRight_toRightOf="parent"
                    android:contentDescription="@string/visto" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintTop_toBottomOf="@+id/line_div"
                    app:layout_constraintLeft_toRightOf="@id/img_poster"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    >
                    <TextView
                        android:id="@+id/lbl_ver_cap"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ver_capitulo"
                        android:textColor="@color/colorBlack"
                        android:layout_weight="1"
                        android:textSize="12sp"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:textAlignment="center"
                        android:layout_gravity="center"
                        android:foreground="?android:attr/selectableItemBackground"
                        tools:targetApi="m" />

                    <TextView
                        android:id="@+id/lbl_ver_list"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/m_s_informaci_n"
                        android:textSize="12sp"
                        android:textColor="@color/colorBlack"
                        android:layout_weight="1"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:textAlignment="center"
                        android:layout_gravity="center"
                        android:foreground="?android:attr/selectableItemBackground"
                        tools:targetApi="m" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

</layout>