<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data>
        <variable
            name="viewmodel"
            type="com.example.sadanime.modulo.login.viewModel.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/root_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/img_fondo_login"
        tools:context=".modulo.login.view.LoginActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            >

            <TextView
                android:id="@+id/lbl_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="42sp"
                android:text="@string/app_name"
                android:textColor="@color/colorWhite"
                android:fontFamily="@font/coiny_regular"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                />


            <androidx.cardview.widget.CardView
                android:id="@+id/cont_card_input_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/lbl_title"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:cardBackgroundColor="@color/colorInput"
                app:cardCornerRadius="@dimen/dimen_18"
                android:layout_marginTop="24dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginBottom="24dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/cont_edt_user"
                        style="@style/ContenInputEditext"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edt_user"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="Usuario"
                            android:lines="1"
                            android:text="@={viewmodel.email}" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/cont_edt_pass"
                        style="@style/ContenInputEditext"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/cont_edt_user"
                        app:passwordToggleEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edt_pass"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="Contraseña"
                            android:inputType="textPassword"
                            android:lines="1"
                            android:text="@={viewmodel.password}" />
                    </com.google.android.material.textfield.TextInputLayout>


                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>


            <TextView
                android:id="@+id/lbl_create_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registrar"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                android:textAllCaps="false"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:clickable="true"
                android:layout_marginTop="24dp"
                android:background="@drawable/btn_sin_corner_radius"
                app:layout_constraintTop_toBottomOf="@+id/cont_card_input_login"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                style="?android:textAppearanceSmall"
                android:focusable="true" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/iniciar_sesion"
                android:textSize="18sp"
                android:layout_marginTop="24dp"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:background="@drawable/btn_corner_radius"
                app:layout_constraintTop_toBottomOf="@+id/lbl_create_user"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:onClick="@{()-> viewmodel.onLoginButtomClick(viewmodel.email, viewmodel.password)}"
                style="?android:textAppearanceSmall"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorCortina"
            android:visibility="gone"
            android:elevation="8dp"
            app:visible="@{viewmodel.progressVisibility}"
            >
            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>